# af_detect

./: .gitignore  LICENSE  README.md  af_analysis.ipynb  analysis.ipynb  get_user_id.py  pyproject.toml  twitch_secrets.py
