[project]
name = "af-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asqlite>=2.0.0",
    "bottleneck>=1.5.0",
    "click>=8.2.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.6",
    "pandas[performance]>=2.3.0",
    "pyarrow>=20.0.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "twitchio>=3.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff]
target-version = "py313"
line-length = 100
